--- a/02_basic_training.ipynb
+++ b/02_basic_training.ipynb
@@ -1484,6 +1484,88 @@
         "colab": {}
       },
       "source": [
+        "class Mnist_Logistic(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.lin1 = nn.Linear(784, 400)\n",
+        "        self.lin2 = nn.Linear(400, 10)\n",
+        "\n",
+        "    def forward(self, xb):\n",
+        "        activ1 = self.lin1(xb)\n",
+        "        relu1 = F.relu(activ1)\n",
+        "        activ2 = self.lin2(relu1)\n",
+        "        return activ2"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "afltX02BSPs_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "epochs = 5"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VQZJLVXXSYfp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "606907ef-14e5-46ca-e31b-89e205875b30"
+      },
+      "source": [
+        "model, opt = get_model()\n",
+        "\n",
+        "for epoch in range(epochs):\n",
+        "    model.train()\n",
+        "    for xb, yb in train_dl:\n",
+        "        pred = model(xb)\n",
+        "        loss = loss_func(pred, yb)\n",
+        "\n",
+        "        loss.backward()\n",
+        "        opt.step()\n",
+        "        opt.zero_grad()\n",
+        "\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        valid_loss = sum(loss_func(model(xb), yb) for xb, yb in valid_dl)\n",
+        "        valid_acc = sum(accuracy(model(xb), yb) for xb, yb in valid_dl)\n",
+        "\n",
+        "    print(epoch, 'loss', valid_loss / len(valid_dl), 'acc', valid_acc/len(valid_dl))"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 loss tensor(0.1628) acc tensor(0.9471)\n",
+            "1 loss tensor(0.1003) acc tensor(0.9705)\n",
+            "2 loss tensor(0.1094) acc tensor(0.9659)\n",
+            "3 loss tensor(0.0814) acc tensor(0.9755)\n",
+            "4 loss tensor(0.0719) acc tensor(0.9771)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3CJfkZY1SZDB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": 0,
